# rex

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  x.py
Engine/Audio/: Audio.cpp  Audio.h
Engine/Core/: Components.h  Engine.cpp  Engine.h  Game.h  GameSceneAdapter.h  Logger.h  Math.h  ResourceManager.cpp  ResourceManager.h  RexMath.h  Scene.h  SceneManager.cpp  SceneManager.h  Window.cpp  Window.h
Engine/Core/Diagnostics/: Assert.h  CrashHandler.h  Logger.h  ProfilerHooks.h
Engine/Core/ECS/: ComponentStorage.h  Entity.h  Query.h  SystemScheduler.h  World.h
Engine/Core/Event/: AsyncEventQueue.h  EngineEvents.h  EventBus.h
Engine/Core/Execution/: EngineLoop.h  FrameContext.h  PhaseScheduler.h
Engine/Core/Job/: SyncPrimitives.h  TaskGraph.h  ThreadPool.h  WorkStealingQueue.h
Engine/Core/Math/: RexMath.h
Engine/Core/Memory/: Arena.h  FrameAllocator.h  IAllocator.h  LinearAllocator.h  PoolAllocator.h
Engine/Core/Module/: ModuleABI.h  ModuleLoader.h  ModuleRegistry.h
Engine/Core/Platform/: FileSystem.h  Input.h  OS.h  Window.h
Engine/Core/Reflection/: PropertyMetadata.h  ReflectionMacros.h  TypeRegistry.h
Engine/Core/Resource/: Handle.h  HandlePool.h
Engine/Core/Time/: EngineClock.h  TimeState.h
Engine/Editor/: EditorSkeleton.cpp  EditorWindow.cpp  EditorWindow.h  Viewport.cpp  Viewport.h
Engine/Editor/Asset/: AssetRegistry.cpp  AssetRegistry.h  DependencyGraph.cpp  DependencyGraph.h  ImportPipeline.cpp  ImportPipeline.h  ThumbnailService.cpp  ThumbnailService.h
Engine/Editor/Core/: EditorApp.cpp  EditorApp.h  EditorCommandBus.cpp  EditorCommandBus.h  EditorSession.cpp  EditorSession.h  EditorState.h  EditorStateStore.cpp  EditorStateStore.h  EditorWorkspace.h  LayoutService.cpp  LayoutService.h  SelectionManager.cpp  SelectionManager.h  TransactionSystem.cpp  TransactionSystem.h
Engine/Editor/Debug/: LogPanel.h  MemoryPanel.h  ProfilerPanel.h
Engine/Editor/Gizmo/: TransformGizmo.h
Engine/Editor/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  DetailsPanel.cpp  DetailsPanel.h  IEditorPanel.h  ModesPanel.h  OutlinerPanel.cpp  OutlinerPanel.h  OutputLogPanel.h  ProjectSettingsPanel.h  ToolbarPanel.h  ViewportPanel.cpp  ViewportPanel.h
Engine/Editor/Plugin/: CommandRegistry.cpp  CommandRegistry.h  EditorModuleManager.cpp  EditorModuleManager.h  EditorPanelRegistry.cpp  EditorPanelRegistry.h  EditorToolRegistry.cpp  EditorToolRegistry.h  IEditorModule.h  InspectorWidgetRegistry.cpp  InspectorWidgetRegistry.h  ShortcutMap.cpp  ShortcutMap.h
Engine/Editor/Tools/: IEditorTool.h  MoveTool.h  RotateTool.h  ScaleTool.h  SelectionTool.h
Engine/EditorRex/: rexui_main.cpp  rexui_next_main.cpp
Engine/Entity/: Entity.cpp  Entity.h  EntityId.h  EntityManager.cpp  EntityManager.h  Player.cpp  Player.h
Engine/Graphics/: Camera2D.h  GLInternal.cpp  GLInternal.h  Graphics.cpp  Graphics.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Sprite.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture.cpp  Texture.h
Engine/Graphics/Core/: FrameBuffer.cpp  FrameBuffer.h  RenderDevice.cpp  RenderDevice.h  RenderGraph.cpp  RenderGraph.h  RenderPass.h
Engine/Graphics/Culling/: FrustumCuller.cpp  FrustumCuller.h  LightCuller.cpp  LightCuller.h
Engine/Graphics/HDR/: ExposureController.cpp  ExposureController.h  HDRBuffer.cpp  HDRBuffer.h
Engine/Graphics/Lighting/: Light.h  LightManager.cpp  LightManager.h  ShadowSystem.cpp  ShadowSystem.h
Engine/Graphics/Material/: Material.h  PBRMaterial.h  ShaderVariant.h
Engine/Graphics/Pipeline/: DeferredPipeline.cpp  DeferredPipeline.h  ForwardPipeline.cpp  ForwardPipeline.h  PostProcessPipeline.cpp  PostProcessPipeline.h
Engine/Graphics/PostProcess/: BloomPass.cpp  BloomPass.h  SSAOPass.cpp  SSAOPass.h  ToneMappingPass.cpp  ToneMappingPass.h
Engine/Input/: Input.cpp  Input.h  InputKeys.h
Engine/Launcher/: editor_main.cpp  rex_main.cpp
Engine/Lua/: LuaBindings.cpp  LuaBindings.h  LuaScene.cpp  LuaScene.h  LuaVM.cpp  LuaVM.h
Engine/Physics/: Physics.cpp  Physics.h  PhysicsSystem.cpp  PhysicsSystem.h  PhysicsWorld.cpp  PhysicsWorld.h  RigidBody.cpp  RigidBody.h  RustPhysicsFFI.h
Engine/Runtime/: runtime_main.cpp
Engine/Rust/physics_core/: Cargo.toml
Engine/Rust/physics_core/src/: lib.rs  rigid_body.rs
Engine/Rust/physics_core/src/world/: math.rs  mod.rs  sim.rs  types.rs
Engine/Text/: Text.cpp  Text.h
Engine/UI/: RexUI.cpp  RexUI.h  RexUIFont.cpp  RexUIFont.h  RexUIRenderer.cpp  RexUIRenderer.h  RexUIWidgets.cpp  RexUIWidgets.h
Engine/UI/RexUI/App/: RexUIEngine.cpp  RexUIEngine.h
Engine/UI/RexUI/Core/: ElementId.cpp  ElementId.h  Event.h  Geometry.h  PaintContext.h  StyleValue.cpp  StyleValue.h  Widget.cpp  Widget.h
Engine/UI/RexUI/Framework/Animation/: Easing.cpp  Easing.h  Timeline.cpp  Timeline.h  Transition.cpp  Transition.h
Engine/UI/RexUI/Framework/Binding/: BindingContext.cpp  BindingContext.h  BindingExpression.h
Engine/UI/RexUI/Framework/Commands/: CommandBus.cpp  CommandBus.h  UICommand.h  UndoRedoStack.cpp  (+1 more)
Engine/UI/RexUI/Renderer/: IRenderBackend.h  IRenderDevice.h  NullRenderDevice.h  RenderBackendFactory.cpp  RenderBackendFactory.h  RenderBackendType.h
Engine/World/: World.cpp  World.h
Examples/: MainScene.cpp  MainScene.h  audio.cpp  breakout.cpp  demoscene.cpp  entity.cpp  example.cpp  falling.cpp  keytest.cpp  lua_game.cpp  main.cpp  menu.cpp  physics.cpp  platformer.cpp  pong.cpp  rogue_dark_cavern.cpp  text.cpp  world.cpp  world_demo.cpp
Examples/scripts/: main.lua
docs/: core.md  graphics.md  input.md  overview.md
docs/english/: core.md  editor_integrated_production_environment.md  entity.md  graphics.md  input.md  overview.md  physics.md  rexui_framework_execution_lock.md  rexui_slate_grade_architecture.md  roadmap.md  world.md
docs/korean/: core.md  editor_integrated_production_environment.md  entity.md  graphics.md  input.md  overview.md  physics.md  rexui_framework_execution_lock.md  rexui_slate_grade_architecture.md  roadmap.md  world.md
game/: entity.lua  sound.lua  sprite.lua  text.lua
(+70 files in other folders)
